Fix horizontal spacing for icons

--- a/src/scss/blocks/nova-blocks/header/_editor.scss
+++ b/src/scss/blocks/nova-blocks/header/_editor.scss
@@ -3,6 +3,7 @@
 
 :root {
   --icons-size-multiplier: 1.3;
+  --icons-horizontal-spacing-reducer: 2;
 }
 
 [data-type="novablocks/header"][class] {
