--- a/src/scss/blocks/nova-blocks/navigation/_style.scss
+++ b/src/scss/blocks/nova-blocks/navigation/_style.scss
@@ -40,7 +40,7 @@
                 &.social-menu-item,
                 &.is-color-scheme-switcher-button,
                 &.is-search-button {
-                    margin-left: calc( var(--theme-header-links-spacing) / 2);
+                    margin-left: calc( var(--theme-header-links-spacing) / var(--icons-horizontal-spacing-reducer));
                 }
             }
 
