--- a/src/scss/components/site-header/_style.scss
+++ b/src/scss/components/site-header/_style.scss
@@ -2,6 +2,7 @@
 
 :root {
     --icons-size-multiplier: 1.3;
+    --icons-horizontal-spacing-reducer: 2;
 }
 
 .site-header--mobile {
