--- a/style-rtl.css
+++ b/style-rtl.css
@@ -1015,7 +1015,8 @@ table {
 
 /* 2.1. Site Header */
 :root {
-  --icons-size-multiplier: 1.3; }
+  --icons-size-multiplier: 1.3;
+  --icons-horizontal-spacing-reducer: 2; }
 
 .site-header--mobile {
   display: none; }
@@ -3702,8 +3703,3 @@ ul.menu,
     grid-column: 1/2;
     grid-row: 1;
     justify-self: flex-end; } }
-
-.social-menu-item,
-.is-color-scheme-switcher-button,
-.is-search-button {
-  --theme-header-links-spacing-setting: 16; }
